# hueml

./: .gitignore  Cargo.toml  README.md
data/: 2023-feb.parquet  2023-jan.parquet  2023-mar.parquet  2024-feb.parquet  2024-jan.parquet  2024-mar.parquet  2024.parquet  mlp.json
src/: db.rs  main.rs
src/cmd/: cli.rs  explore.rs  exportdb.rs  import.rs  mod.rs  predict.rs  train.rs
src/data/: idg.rs  mod.rs  tests.rs  tsg.rs  types.rs
src/mlp/: activationfns.rs  config.rs  fns.rs  mlp.rs  mod.rs  tests.rs
src/unda/: tests.rs
