[package]
name = "hueml"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive", "env"] }
colored = "3.0.0"
futures = "0.3.31"
itertools = "0.14.0"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
polars = { version = "0.48.1", features = ["parquet", "lazy", "random"] }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt", "macros"] }
